<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clever Giraffe</string>
    <string name="title_activity_welcome">Clever Giraffe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!Liu chunlong</string>
    <string name="Button1"></string>
    <string name="Go">Go</string>
    <string name="startTime">开始计时</string>
    <string name="stopTime">停止计时</string>
    <string name="reset">重置</string>
    <string name="totalCount">source</string>
    <string name="reaminTime">remainTime</string>
    <string name="remainCount">remainCount</string>
    <string name="plus_target">+1</string>
    <string name="plus_time">+5s</string>
    <string name="hard">困难</string>
    <string name="Simple">简单</string>
    <string name="medium">中等</string>
    <string name="tapforg">点青蛙</string>
    <string name="gamedisplay">爆青蛙</string>
    <string name="gamecolor">画青蛙</string>
    <string name="frogRun">跑青蛙</string>
    <string name="btnJume">跳青蛙</string>

    <!-- 游戏结算界面   show_score.xml -->
    <string name="best_score">历史最好得分</string>
    <string name="score">本局得分</string>
    <string name="historyScore">203</string>
    <string name="thisScore">121</string>

    <string name="txtSound">音效：开</string>
    <string name="txtMusic">声音：开</string>
    <string name="txtSoundOff">音效：关</string>
    <string name="txtMusicOff">声音：关</string>
    <string name="txtReset">重新开始</string>
    <string name="txtLangCn">语言：中文</string>
    <string name="txtLangEn">语言：英文</string>
    <string name="txtCre">制作人</string>
          

</resources>