<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnGameColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:text="@string/gamecolor" />

    <Button
        android:id="@+id/btnGameTap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGameColor"
        android:layout_centerHorizontal="true"
        android:text="@string/tapforg" />

    <Button
        android:id="@+id/btnGameDiaplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGameTap"
        android:layout_centerHorizontal="true"
        android:text="@string/gamedisplay" />

    <Button
        android:id="@+id/BtnRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnGameDiaplay"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="41dp"
        android:text="@string/frogRun" />

</RelativeLayout>