<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnsimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Simple" />

    <Button
        android:id="@+id/btnhard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="92dp"
        android:text="@string/hard" />

    <Button
        android:id="@+id/btnmiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="56dp"
        android:layout_toRightOf="@+id/btnhard"
        android:text="@string/medium" />

</RelativeLayout>
