<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:onClick="onStart"
            android:text="@string/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:onClick="onStop"
            android:text="@string/stopTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:onClick="onReset"
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>
